--- a/i3/config
+++ b/i3/config
@@ -1,127 +1,83 @@
-# i3 config file (v4)
-#
-# Please see https://i3wm.org/docs/userguide.html for a complete reference!
-
-#autostart
+# Autostart
 exec --no-startup-id /usr/lib/policykit-1-gnome/polkit-gnome-authentication-agent-1
 exec --no-startup-id playerctld daemon
-exec --no-startup-id "setxkbmap -model pc104 -layout us,ru -variant ,, -option grp:alt_shift_toggle"
+exec --no-startup-id "setxkbmap -model pc104 -layout us,ru,ua -variant ,, -option grp:alt_shift_toggle"
 exec --no-startup-id xset r rate 300 30
 exec --no-startup-id synclient HorizTwoFingerScroll=1
-exec --no-startup-id compton --config /home/dima/.config/compton.conf 
+exec --no-startup-id compton --config ~/.config/compton.conf 
 exec --no-startup-id nitrogen --restore
-exec --no-startup-id polybar example
+exec --no-startup-id dunst -conf ~/.config/dunst/dunstrc
+exec_always --no-startup-id ~/.config/polybar/launch.sh
+exec_always --no-startup-id i3-layouts
 exec --no-startup-id /usr/lib/x86_64-linux-gnu/libexec/kdeconnectd
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork -i /home/dima/Изображения/Обои/devilslaptop.png -t
+exec --no-startup-id xss-lock --transfer-sleep-lock ~/.config/i3/scripts/lock
 
+# Mod
 set $mod Mod4
 
-# This config file uses keycodes (bindsym) and was written for the QWERTY
-# layout.
-#
-# To get a config file with the same key positions, but for your current
-# layout, use the i3-config-wizard
+# Font
+font pango:DejaVu Sans 10
 
-# Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below.
-# font pango:monospace 10
+# Layout
+set $i3l autosplit to workspace $ws1
+set $i3l 3columns 0.65 0.4 2 right to workspace $ws2
+set $i3l autosplit to workspace $ws3
+set $i3l autosplit to workspace $ws4
+set $i3l autosplit to workspace $ws5
+set $i3l autosplit to workspace $ws6
+set $i3l autosplit to workspace $ws7
+set $i3l autosplit to workspace $ws8
+set $i3l autosplit to workspace $ws9
+set $i3l autosplit to workspace $ws10
 
-# This font is widely installed, provides lots of unicode glyphs, right-to-left
-# text rendering and scalability on retina/hidpi displays (thanks to pango).
-font pango:Hack 10
+# Polybar hiding
+bindsym $mod+space exec polybar-msg cmd toggle
+# Change focus
+bindsym $mod+h focus left
+bindsym $mod+j focus down
+bindsym $mod+k focus up
+bindsym $mod+l focus right
 
-# The combination of xss-lock, nm-applet and pactl is a popular choice, so
-# they are included here as an example. Modify as you see fit.
-
-# xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
-# screen before suspend. Use loginctl lock-session to lock your screen.
-# exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork -i /home/dima/Изображения/Обои/27ace75.png -t
-
-# NetworkManager is the most popular way to manage wireless networks on Linux,
-# and nm-applet is a desktop environment-independent system tray GUI for it.
-
-# Use pactl to adjust volume in PulseAudio.
-set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +1% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -1% && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
-
-# Media player controls
-bindsym XF86AudioPlay exec playerctl play-pause
-bindsym XF86AudioNext exec playerctl next
-bindsym XF86AudioPrev exec playerctl previous
-
-# use these keys for focus, movement, and resize directions when reaching for
-# the arrows is not convenient
-set $up k
-set $down j
-set $left h
-set $right l
-
-# start dmenu (a program launcher)
-bindsym $mod+r exec --no-startup-id rofi -show
-# bindsym $mod+r exec --no-startup-id /home/dima/.config/rofi/launchers/misc/launcher.sh
-# A more modern dmenu replacement is rofi:
-# bindsym $mod+d exec "rofi -modi drun,run -show drun"
-# There also is i3-dmenu-desktop which only displays applications shipping a
-# .desktop file. It is a wrapper around dmenu, so you need that installed.
-
-# change focus
-bindsym $mod+$left focus left
-bindsym $mod+$down focus down
-bindsym $mod+$up focus up
-bindsym $mod+$right focus right
-
-# alternatively, you can use the cursor keys:
+# Alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
-# move focused window
-bindsym $mod+Shift+$left move left
-bindsym $mod+Shift+$down move down
-bindsym $mod+Shift+$up move up
-bindsym $mod+Shift+$right move right
+# Move focused window
+bindsym $mod+Shift+h move left
+bindsym $mod+Shift+j move down
+bindsym $mod+Shift+k move up
+bindsym $mod+Shift+l move right
 
-# alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
-
-# split in horizontal orientation
+# Alternatively, you can use the cursor keys:
+bindsym $mod+Shift+Left exec i3l move left
+bindsym $mod+Shift+Down exec i3l move down
+bindsym $mod+Shift+Up exec i3l move up
+bindsym $mod+Shift+Right exec i3l move right
+# Split in horizontal orientation
 bindsym $mod+Mod1+v split h
 
-# split in vertical orientation
+# Split in vertical orientation
 bindsym $mod+Mod1+h split v
 
-# enter fullscreen mode for the focused container
+# Enter fullscreen mode for the focused container
 bindsym F11 fullscreen toggle
+popup_during_fullscreen smart
 
-# change container layout (stacked, tabbed, toggle split)
-# bindsym $mod+s layout stacking
-# bindsym $mod+w layout tabbed
-# bindsym $mod+e layout toggle split
+# Toggle tiling / floating
+bindsym $mod+Mod1+f floating toggle, move absolute position center, border none
 
-# toggle tiling / floating
-bindsym $mod+Mod1+f floating toggle, move absolute position center
-
-# use Mouse+$mod to drag floating windows to their wanted position
+# Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
-floating_maximum_size 900 x 500
-
-# move the currently focused window to the scratchpad
- bindsym $mod+minus move scratchpad
+# Move the currently focused window to the scratchpad
+bindsym $mod+minus move scratchpad
 
 # Show the next scratchpad window or hide the focused scratchpad window.
-# If there are multiple scratchpad windows, this command cycles through them.
- bindsym $mod+Shift+minus scratchpad show
+bindsym $mod+Shift+minus scratchpad show
 
-# Define names for default workspaces for which we configure key bindings later on.
-# We use variables to avoid repeating the names in multiple places.
+# Names for  workspaces
 set $ws1 "1"
 set $ws2 "2"
 set $ws3 "3"
@@ -133,7 +89,7 @@ set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
 
-# switch to workspace
+# Switch to workspace
 bindsym $mod+1 workspace number $ws1
 bindsym $mod+2 workspace number $ws2
 bindsym $mod+3 workspace number $ws3
@@ -145,10 +101,10 @@ bindsym $mod+8 workspace number $ws8
 bindsym $mod+9 workspace number $ws9
 bindsym $mod+0 workspace number $ws10
 
-bindsym $mod+Mod1+k workspace next
-bindsym $mod+Mod1+j workspace prev
+bindsym $mod+Mod1+j workspace next
+bindsym $mod+Mod1+k workspace prev
 
-# move focused container to workspace
+# Move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace number $ws1
 bindsym $mod+Shift+2 move container to workspace number $ws2
 bindsym $mod+Shift+3 move container to workspace number $ws3
@@ -160,23 +116,25 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
+
+# Restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
-# exit i3 (logs you out of your X session)
+
+# Exit i3 (logs you out of your X session)
 # bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
-# resize window (you can also use the mouse for that)
-mode "resize" {
+# Resize window (you can also use the mouse for that)
+mode " Resize" {
         # These bindings trigger as soon as you enter the resize mode
 
         # Pressing left will shrink the window’s width.
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym $left       resize shrink width 1 px or 1 ppt
-        bindsym $down       resize grow height 1 px or 1 ppt
-        bindsym $up         resize shrink height 1 px or 1 ppt
-        bindsym $right      resize grow width 1 px or 1 ppt
+        bindsym h       resize shrink width 1 px or 1 ppt
+        bindsym j       resize grow height 1 px or 1 ppt
+        bindsym k         resize shrink height 1 px or 1 ppt
+        bindsym l      resize grow width 1 px or 1 ppt
 
         # same bindings, but for the arrow keys
         bindsym Left        resize shrink width 5 px or 5 ppt
@@ -189,7 +147,7 @@ mode "resize" {
         bindsym Escape mode "default"
 }
 
-bindsym $mod+z mode "resize"
+bindsym $mod+z mode " Resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -210,10 +168,10 @@ bindsym $mod+z mode "resize"
 #  	workspace_buttons yes
 #  	position top
 #     tray_padding 0
-#     status_command /usr/local/bin/i3status -c /home/dima/.config/i3status/i3status.conf
+#     status_command /usr/local/bin/i3status -c ~/.config/i3status/i3status.conf
 # }
 
-#borders
+# Borders
 # default_border pixel 1
 # default_floating_border pixel 1
 # hide_edge_borders none
@@ -230,7 +188,7 @@ mode "borders" {
 }
 bindsym $mod+Shift+b mode "borders"
 
-#gaps
+# Gaps
 smart_gaps on
 gaps inner 12
 gaps outer 0
@@ -246,77 +204,119 @@ mode "gaps" {
         bindsym Escape mode "default"
 }
 bindsym $mod+Shift+g mode "gaps"
-#mouse
+
+# Mouse
 focus_follows_mouse yes
 
-#keybind
+# Keybind
+bindsym $mod+r exec --no-startup-id rofi -show
 bindsym $mod+t exec urxvt
 bindsym $mod+Shift+q kill
-bindsym $mod+F6 exec i3lock --nofork -i /home/dima/Изображения/Обои/941429.png -t
 bindsym Mod1+Tab exec rofi -show window -window-thumbnail 
-bindsym Mod1+Control+t exec /home/dima/.config/rofi/rofitr
-bindsym Mod1+Control+s exec /home/dima/.config/rofi/web-search.sh
-bindsym Mod1+Control+b exec /home/dima/.config/rofi/rofi-beats
+bindsym Mod1+Control+t exec ~/.config/rofi/rofitr
+bindsym Mod1+Control+s exec ~/.config/rofi/web-search.sh
+bindsym Mod1+Control+b exec ~/.config/rofi/rofi-beats
+bindsym $mod+Shift+Escape  exec ~/.config/rofi/system
+
+# Use pactl to adjust volume in PulseAudio.
+set $refresh_i3status killall -SIGUSR1 i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +1% && $refresh_i3status
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -1% && $refresh_i3status
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
+bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+
+# Media player controls
+bindsym XF86AudioPlay exec playerctl play-pause
+bindsym XF86AudioNext exec playerctl next
+bindsym XF86AudioPrev exec playerctl previous
 
 # Sreen brightness controls
 bindsym XF86MonBrightnessUp exec xbacklight -inc 25 # increase screen brightness
 bindsym XF86MonBrightnessDown exec xbacklight -dec 25 # decrease screen brightness
 
-# Color Class               Border      BG         FG
-client.focused          #3c3836 #98971a #fabd2f #98971a
-client.focused_inactive #3c3836 #504945 #d5c4a1 #504945
-client.unfocused        #3c3836 #504945 #d5c4a1 #504945
-client.urgent           #7c6f64 #fabd2f #3c3836 #fabd2f
+# # green gruvbox
+# # class                 border  backgr  text    indicator
+# client.focused          #98971a #98971a #1d2021 #98971a
+# client.focused_inactive #1d2021 #1d2021 #d79921 #d12021
+# client.unfocused        #1d2021 #1d2021 #d79921 #b16286
+# client.urgent           #cc241d #cc241d #f9f5d7 #cc241d
 
-#Assing programs to workspace
-for_window [class="URxvt"] move to workspace $ws1
+# # blue gruvbox
+# # class                 border  backgr  text    indicator
+# client.focused          #458588 #458588 #1d2021 #458588
+# client.focused_inactive #1d2021 #1d2021 #d79921 #1d2021
+# client.unfocused        #1d2021 #1d2021 #d79921 #b16286
+# client.urgent           #cc241d #cc241d #f9f5d7 #cc241d
+
+# yellow gruvbox
+# class                 border  backgr  text    indicator
+client.focused          #d79921 #d79921 #1d2021 #d79921
+client.focused_inactive #1d2021 #1d2021 #d79921 #1d2021
+client.unfocused        #1d2021 #1d2021 #d79921 #b16286
+client.urgent           #cc241d #cc241d #f9f5d7 #cc241d
+
+
+# Assing programs to workspace
+# for_window [class="URxvt"] move to workspace $ws1
 for_window [class="Firefox"] move to workspace $ws2
+for_window [class="LibreWolf"] move to workspace $ws2
 for_window [class="Chromium-browser"] move to workspace $ws2
-for_window [class="KeePassXC"] move to workspace $ws3
+for_window [class="discord"] move to workspace $ws3
+for_window [class="Telegram"] move to workspace $ws3
+for_window [class="Viber"] move to workspace $ws3
+for_window [class="KeePassXC"] move to workspace $ws4
+for_window [class="vlc"] move to workspace $ws5
+for_window [class="mpv"] move to workspace $ws5
+for_window [class="retroarch"] move to workspace $ws6
+for_window [class="wine"] move to workspace $ws6
 
-#Focus
+# Focus
 for_window [class="URxvt"] focus
 for_window [class="Firefox"] focus
-for_window [class="Chromium-browser"] focus
+for_window [class="LibreWolf"] focus
+# for_window [class="Chromium-browser"] focus
 for_window [class="KeePassXC"] focus
 
-#floating
+# Floating
 for_window [class="Nitrogen"] floating enable, move absolute position center
 for_window [class="Blueman-manager"] floating enable, move absolute position center
 
-#sticky mode
+floating_minimum_size 300 x 150
+floating_maximum_size 800 x 450
+
+# Sticky mode
 for_window [class="Firefox"] sticky enable, border none
-for_window [class="Chromium-browser"] sticky enable, borders none
+for_window [class="libreWolf"] sticky enable, border none
+for_window [class="Chromium-browser"] sticky enable, border none
 for_window [class="vlc"] sticky enable, border none
 
-#screenshot
-#bindsym Print exec --no-startup-id /home/dima/.config/rofi/bin/menu_screenshot
-set $screenshot (F)ull, (S)elect
-mode "screenshot" {
+# Screenshot
+#bindsym Print exec --no-startup-id ~/.config/rofi/bin/menu_screenshot
+set $screenshot (f) (s) 
+mode "$screenshot" {
 	# Fullscreen
-	bindsym f exec flameshot full -p /home/dima/Изображения/Screenshots
+	bindsym f exec sleep 0.5 && flameshot full -p ~/Изображения/Screenshots, mode "default"
 
 	# Selection
-	bindsym s exec flameshot gui -p /home/dima/Изображения/Screenshots/
+	bindsym s exec sleep 0.5 && flameshot gui -p ~/Изображения/Screenshots, mode "default"
 
         # back to normal: Enter or Escape or $mod+r
         bindsym Return mode "default"
         bindsym Escape mode "default"
 }
-bindsym Print mode "screenshot"
+bindsym Print mode "$screenshot"
 
-#system
+# System
 # bindsym $mod+Shift+Escape exec --no-startup-id ~/.config/rofi/bin/menu_powermenu
-set $system (L)ock, (R)eboot, (S)hutdown, s(U)spend, l(O)gout
-mode "$system" {
-	bindsym r exec systemctl reboot, mode "default"
-    bindsym s exec systemctl poweroff, mode "default"
-    bindsym l exec i3lock --nofork -i /home/dima/Изображения/Обои/devilslaptop.png -t, mode "default"
-    bindsym u exec systemctl suspend, mode "default"
-    bindsym o exec i3-msg exit, mode "default"
-        # back to normal: Enter or Escape or $mod+r
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-}
-bindsym $mod+Shift+Escape mode "$system"
-
+# set $system (L)ock, (R)eboot, (S)hutdown, s(U)spend, l(O)gout
+# mode "$system" {
+# 	bindsym r exec systemctl reboot, mode "default"
+#     bindsym s exec systemctl poweroff, mode "default"
+#     bindsym l exec ~/.config/i3/scripts/lock, mode "default"
+#     bindsym u exec systemctl suspend, mode "default"
+#     bindsym o exec i3-msg exit, mode "default"
+#         # back to normal: Enter or Escape or $mod+r
+#         bindsym Return mode "default"
+#         bindsym Escape mode "default"
+# }
+# bindsym $mod+Shift+Escape mode "$system"
