--- a/i3/config
+++ b/i3/config
@@ -14,18 +14,21 @@
     ### Autostart ###
     #################
 ##########################################################################################
- exec --no-startup-id /usr/lib/policykit-1-gnome/polkit-gnome-authentication-agent-1
+ exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
  exec --no-startup-id playerctld daemon
  exec --no-startup-id gxkb
  exec --no-startup-id xset r rate 300 30
  exec --no-startup-id synclient HorizTwoFingerScroll=1
- exec --no-startup-id compton --config ~/.config/compton.conf 
+ exec --no-startup-id picom --config ~/.config/picom.conf
+ exec --no-startup-id xss-lock --transfer-sleep-lock i3lock-fancy
  exec --no-startup-id nitrogen --restore
  exec --no-startup-id dunst -config ~/.config/dunst/dunstrc
  exec_always --no-startup-id ~/.config/polybar/launch.sh
- exec_always --no-startup-id i3-layouts
- exec --no-startup-id /usr/lib/x86_64-linux-gnu/libexec/kdeconnectd
- exec --no-startup-id xss-lock --transfer-sleep-lock ~/.config/i3/scripts/lock
+ exec_always --no-startup-id ~/.config/i3/scripts/autotiling
+ exec --no-startup-id /usr/lib/kdeconnectd
+ exec --no-startup-id redshift -l 50.45466:30.523850 -P -t 5600:3500
+ # exec --no-startup-id xfce4-power-manager
+ # exec --no-startup-id xss-lock --transfer-sleep-lock ~/.config/i3/scripts/lock
 ##########################################################################################
 
     #############
@@ -50,6 +53,8 @@
  bindsym $mod+Shift+r restart # Restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
  bindsym $mod+r exec --no-startup-id rofi -show
  bindsym $mod+t exec urxvt
+ bindsym $mod+b exec urxvt -e bmenu
+ bindsym $mod+w exec ~/.config/rofi/nmcli_rofi
  bindsym $mod+Shift+q kill
  bindsym Control+Shift+Escape exec urxvt -e xkill
  bindsym $mod+Shift+p exec ~/.config/polybar/scripts/polybar.sh/.config/polybar/scripts/polybar.sh
@@ -57,9 +62,10 @@
  bindsym Mod1+Control+t exec ~/.config/rofi/rofitr
  bindsym Mod1+Control+s exec ~/.config/rofi/web-search.sh
  bindsym Mod1+Control+b exec ~/.config/rofi/rofi-beats
- bindsym $mod+Shift+Escape  exec ~/.config/rofi/system
+ # bindsym $mod+Shift+Escape  exec ~/.config/rofi/system
  bindsym $mod+space exec polybar-msg cmd toggle
- bindsym $mod+Mod1+l exec ~/.config/i3/scripts/lock
+ # bindsym $mod+Mod1+l exec ~/.config/i3/scripts/lock
+ bindsym $mod+Mod1+l exec i3lock-fancy
 
 # Use pactl to adjust volume in PulseAudio.
  set $refresh_i3status killall -SIGUSR1 i3status
@@ -82,17 +88,17 @@
     ### Windows settings ###
     ########################
 ##########################################################################################
-# Layout
- set $i3l autosplit to workspace $ws1
- set $i3l 3columns 0.65 0.4 2 right to workspace $ws2
- set $i3l autosplit to workspace $ws3
- set $i3l autosplit to workspace $ws4
- set $i3l autosplit to workspace $ws5
- set $i3l autosplit to workspace $ws6
- set $i3l autosplit to workspace $ws7
- set $i3l autosplit to workspace $ws8
- set $i3l autosplit to workspace $ws9
- set $i3l autosplit to workspace $ws10
+# # Layout
+#  set $i3l autosplit to workspace $ws1
+#  set $i3l 3columns 0.65 0.4 2 right to workspace $ws2
+#  set $i3l autosplit to workspace $ws3
+#  set $i3l autosplit to workspace $ws4
+#  set $i3l autosplit to workspace $ws5
+#  set $i3l autosplit to workspace $ws6
+#  set $i3l autosplit to workspace $ws7
+#  set $i3l autosplit to workspace $ws8
+#  set $i3l autosplit to workspace $ws9
+#  set $i3l autosplit to workspace $ws10
 
 # Change focus
  bindsym $mod+h focus left
@@ -188,14 +194,14 @@
         # Pressing down will grow the window’s height.
         bindsym h       resize shrink width 1 px or 1 ppt
         bindsym j       resize grow height 1 px or 1 ppt
-        bindsym k         resize shrink height 1 px or 1 ppt
-        bindsym l      resize grow width 1 px or 1 ppt
+        bindsym k       resize shrink height 1 px or 1 ppt
+        bindsym l       resize grow width 1 px or 1 ppt
 
         # same bindings, but for the arrow keys
-        bindsym Left        resize shrink width 5 px or 5 ppt
-        bindsym Down        resize grow height 5 px or 5 ppt
-        bindsym Up          resize shrink height 5 px or 5 ppt
-        bindsym Right       resize grow width 5 px or 5 ppt
+        bindsym Shift+h     resize shrink width 5 px or 5 ppt
+        bindsym Shift+j     resize grow height 5 px or 5 ppt
+        bindsym Shift+k     resize shrink height 5 px or 5 ppt
+        bindsym Shift+l     resize grow width 5 px or 5 ppt
 
         # back to normal: Enter or Escape or $mod+r
         bindsym Return mode "default"
@@ -205,38 +211,39 @@
  bindsym $mod+z mode " Resize"
 
 # Borders
- # default_border pixel 1
- # default_floating_border pixel 1
- # hide_edge_borders none
- for_window [class=".*"] border pixel 2
+ default_border pixel 2
+ default_floating_border none
+ hide_edge_borders smart
+ # for_window [class=".*"] border pixel 2
 
- mode "borders" {
-    bindsym n border none; mode "default"
-    bindsym o border pixel 1; mode "default"
-    bindsym b border pixel 2; mode "default"
-
-   
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
- }
- bindsym $mod+Shift+b mode "borders"
-
-# Gaps
- smart_gaps on
- gaps inner 12
- gaps outer 0
- smart_borders on
- hide_edge_borders smart_no_gaps
-
- mode "gaps" {
-    bindsym n gaps inner all set 0; gaps outer all set 0; mode "default"
-    bindsym g gaps inner all set 12; gaps outer all set 0; mode "default"
+ mode "borders (0/1/2)" {
+    bindsym 0 border none; mode "default"
+    bindsym 1 border pixel 1; mode "default"
+    bindsym 2 border pixel 2; mode "default"
 
    
         bindsym Return mode "default"
         bindsym Escape mode "default"
  }
- bindsym $mod+Shift+g mode "gaps"
+ bindsym $mod+Shift+b mode "borders (0/1/2)"
+
+# # Gaps
+#  # gaps inner 12
+#  gaps inner 0
+#  gaps outer 0
+#  smart_gaps on
+#  smart_borders on
+#  hide_edge_borders smart_no_gaps
+
+#  mode "gaps (y/n)" {
+#     bindsym n gaps inner all set 0; gaps outer all set 0; mode "default"
+#     bindsym y gaps inner all set 12; gaps outer all set 0; mode "default"
+
+   
+#         bindsym Return mode "default"
+#         bindsym Escape mode "default"
+#  }
+#  bindsym $mod+Shift+g mode "gaps (y/n)"
 
 # Borders themes
  # # green gruvbox
@@ -263,36 +270,41 @@
 
 # Assing programs to workspace
 # for_window [class="URxvt"] move to workspace $ws1
- for_window [class="Firefox"] move to workspace $ws2
- for_window [class="LibreWolf"] move to workspace $ws2
- for_window [class="Chromium-browser"] move to workspace $ws2
- for_window [class="discord"] move to workspace $ws3
- for_window [class="Telegram"] move to workspace $ws3
- for_window [class="Viber"] move to workspace $ws3
- for_window [class="KeePassXC"] move to workspace $ws4
- for_window [class="vlc"] move to workspace $ws5
- for_window [class="mpv"] move to workspace $ws5
- for_window [class="retroarch"] move to workspace $ws6
- for_window [class="wine"] move to workspace $ws6
+ assign [class="Chromium"] $ws2
+ assign [class="Firefox"] $ws2
+ assign [class="librewolf"] $ws2
+ assign [class="discord"] $ws3
+ assign [class="Telegram"] $ws3
+ assign [class="Viber"] $ws3
+ assign [class="KeePassXC"] $ws4
+ assign [class="photoshop.exe"] $ws5
+ assign [class="krita"] $ws5
+ assign [class="retroarch"] $ws6
+ assign [class="wine"] $ws6
+ assign [class="vlc"] $ws7
+ assign [class="mpv"] $ws7
+ assign [class="qBittorren"] $ws8
 
 # Focus
  for_window [class="URxvt"] focus
- # for_window [class="Firefox"] focus
- # for_window [class="LibreWolf"] focus
- # for_window [class="Chromium-browser"] focus
+ for_window [class="Firefox"] focus
+ for_window [class="LibreWolf"] focus
+ for_window [class="Chromium"] focus
  for_window [class="KeePassXC"] focus
 
 # Floating
  for_window [class="Nitrogen"] floating enable, move absolute position center
  for_window [class="Blueman-manager"] floating enable, move absolute position center
  for_window [class="Sxiv"] floating enable, move absolute position center
+ for_window [class="protonvpn"] floating enable, move absolute position center
 
- floating_minimum_size 300 x 150
- floating_maximum_size 800 x 450
+ # floating_minimum_size 300 x 150
+ # floating_maximum_size 800 x 450
+ floating_maximum_size 1366 x 748
 
 # Sticky mode
  for_window [class="Firefox"] sticky enable, border none
- for_window [class="LibreWolf"] sticky enable, border none
+ # for_window [class="LibreWolf"] sticky enable, border none
  for_window [class="Chromium-browser"] sticky enable, border none
  for_window [title="Картинка в картинке"] sticky enable, border none
  for_window [class="vlc"] sticky enable, border none
@@ -345,6 +357,20 @@
         bindsym Escape mode "default"
  }
  bindsym Print mode "$screenshot"
+
+# Menu
+ set $menu (l) (r) (s)
+ mode "$menu" {
+	bindsym l exec i3lock-fancy, mode "default"
+	bindsym r exec reboot, mode "default"
+    bindsym s exec shutdown now, mode "default"
+
+        # back to normal: Enter or Escape or $mod+r
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
+ }
+ bindsym $mod+Shift+Escape mode "$menu"
+
 ##########################################################################################
 #                                                                                        #
 #                               mmmmmm            #                                      #
